--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
+        "jwage/easy-csv": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
