--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.3",
-        "cross-env": "^5.1",
+        "cross-env": "^5.2.1",
         "jquery": "^3.3.1",
-        "laravel-mix": "^4.1.2",
-        "lodash": "^4.17.14",
-        "popper.js": "^1.12",
+        "laravel-mix": "^4.1.4",
+        "lodash": "^4.17.15",
+        "popper.js": "^1.16.0",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.22.4",
-        "sass-loader": "^7.1.0",
+        "sass": "^1.23.6",
+        "sass-loader": "^7.3.1",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "daterangepicker": "^3.0.5",
+        "moment": "^2.24.0"
     }
 }
